Managed DirectX 2.0 expired, meaning the emulator broke :(
DirectInput plugin now uses MDX1.1. Removed dependency on MDX in XInput (use PInvoke now - not sure if it works on anything but Vista - actually, not even sure it works!). Remove XMB from Player (the only thing that required MDX). Removed XMB-related resources from build (exe dropped quite a bit in size).

Added some Vista Glass support in Player for the statusbar. Really just wanted to learn how to do it right (as there are NO tutorials/resources for properly drawing text!), and I succeded. Should fallback gracefully on non-Vista or DWM-disabled machines.

Added a cool testing/reporting feature that allows components to report issues back. A fancy UI was added to the Player to present it. No more assert firing when a component isn't configured right :)

Still trying to determine what I want to do with the new graphics component. Can't use MDX2 obviously, which means my old component is dead. Debating whether or not to use OpenGL or XNA (hence the projects for each). I looked in to using D3D10 (via the Managed Direct3D 10 layer some guy wrote at http://www.codeplex.com/Wiki/View.aspx?ProjectName=MD3D10, but it doesn't run for me. I'm hoping that when I have a chance to look at this code again in 2-3 weeks they will have a working release I can play with. The problem with D3D10 and XNA is that there is no fixed-function support, which means I'd have to dynamically emit shaders to get anything to draw. OpenGL's advantage is that it would be ultra-easy to get setup and working, but I don't like any of the managed wrappers I've found. I could always write it unmanaged, but if I picked OpenGL I'd want to exploit the cross-platformness and that would kill it.

--- a/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
+++ b/Noxa.Emulation.Psp.Player/Noxa.Emulation.Psp.Player.csproj
@@ -37,7 +37,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.DirectX, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -52,17 +51,6 @@
     <Compile Include="Configuration\ConfigurationHost.Designer.cs">
       <DependentUpon>ConfigurationHost.cs</DependentUpon>
     </Compile>
-    <Compile Include="CrossMediaBar\BarGroup.cs" />
-    <Compile Include="CrossMediaBar\BarItem.cs" />
-    <Compile Include="CrossMediaBar\GameBarItem.cs" />
-    <Compile Include="CrossMediaBar\Helpers\Vmr9Allocator.cs" />
-    <Compile Include="CrossMediaBar\InputManager.cs" />
-    <Compile Include="CrossMediaBar\Manager.cs" />
-    <Compile Include="CrossMediaBar\MemoryStickBarGroup.cs" />
-    <Compile Include="CrossMediaBar\Scene.cs" />
-    <Compile Include="CrossMediaBar\SoundManager.cs" />
-    <Compile Include="CrossMediaBar\UmdBarGroup.cs" />
-    <Compile Include="CrossMediaBar\VideoManager.cs" />
     <Compile Include="GamePicker\GameEntry.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -89,11 +77,20 @@
     <Compile Include="Configuration\Options.Designer.cs">
       <DependentUpon>Options.cs</DependentUpon>
     </Compile>
+    <Compile Include="IssueReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IssueReport.Designer.cs">
+      <DependentUpon>IssueReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Player.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Player.Designer.cs">
       <DependentUpon>Player.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Player.Glass.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -117,6 +114,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>PickerDialog.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="IssueReport.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>IssueReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Player.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Player.cs</DependentUpon>
@@ -125,6 +126,11 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Strings.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -140,6 +146,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="Properties\Settings.cs" />
+    <Compile Include="Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -167,7 +179,9 @@
     <None Include="Resources\InvalidIcon.png" />
     <Content Include="Resources\AddIcon.png" />
     <Content Include="Resources\ClearIcon.png" />
+    <None Include="Resources\ErrorIcon.png" />
     <Content Include="Resources\IconBackground.png" />
+    <None Include="Resources\InfoIcon.png" />
     <Content Include="Resources\MemoryStickIcon.png" />
     <Content Include="Resources\psp.ico" />
     <None Include="Resources\PspBoot.wmv" />
@@ -189,18 +203,19 @@
     <Content Include="Resources\RestartIcon.png" />
     <Content Include="Resources\StopIcon.png" />
     <Content Include="Resources\UmdIcon.png" />
-    <Content Include="Resources\Wallpaper01.jpg" />
-    <Content Include="Resources\Wallpaper02.jpg" />
-    <Content Include="Resources\Wallpaper03.jpg" />
-    <Content Include="Resources\Wallpaper04.jpg" />
-    <Content Include="Resources\Wallpaper05.jpg" />
-    <Content Include="Resources\Wallpaper06.jpg" />
-    <Content Include="Resources\Wallpaper07.jpg" />
-    <Content Include="Resources\Wallpaper08.jpg" />
-    <Content Include="Resources\Wallpaper09.jpg" />
-    <Content Include="Resources\Wallpaper10.jpg" />
-    <Content Include="Resources\Wallpaper11.jpg" />
-    <Content Include="Resources\Wallpaper12.jpg" />
+    <None Include="Resources\Wallpaper01.jpg" />
+    <None Include="Resources\Wallpaper02.jpg" />
+    <None Include="Resources\Wallpaper03.jpg" />
+    <None Include="Resources\Wallpaper04.jpg" />
+    <None Include="Resources\Wallpaper05.jpg" />
+    <None Include="Resources\Wallpaper06.jpg" />
+    <None Include="Resources\Wallpaper07.jpg" />
+    <None Include="Resources\Wallpaper08.jpg" />
+    <None Include="Resources\Wallpaper09.jpg" />
+    <None Include="Resources\Wallpaper10.jpg" />
+    <None Include="Resources\Wallpaper11.jpg" />
+    <None Include="Resources\Wallpaper12.jpg" />
+    <None Include="Resources\WarningIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
