--- a/Noxa.Emulation.Psp.Player/app.config
+++ b/Noxa.Emulation.Psp.Player/app.config
@@ -16,6 +16,9 @@
             <setting name="LastPlayedGame" serializeAs="String">
                 <value />
             </setting>
+            <setting name="ShowReportOnWarnings" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Noxa.Emulation.Psp.Player.Properties.Settings>
     </userSettings>
 </configuration>
