--- a/Noxa.Emulation.Psp.IO.Input.DirectInput/Noxa.Emulation.Psp.IO.Input.DirectInput.csproj
+++ b/Noxa.Emulation.Psp.IO.Input.DirectInput/Noxa.Emulation.Psp.IO.Input.DirectInput.csproj
@@ -37,9 +37,10 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.DirectX, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
+    <Reference Include="Microsoft.DirectX.DirectInput, Version=1.0.2902.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
