--- a/Noxa.Emulation.Psp.Player/Properties/Settings.settings
+++ b/Noxa.Emulation.Psp.Player/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="LastPlayedGame" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ShowReportOnWarnings" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
